--- a/operations/phlare/helm/phlare/rendered/micro-services.yaml
+++ b/operations/phlare/helm/phlare/rendered/micro-services.yaml
@@ -12,7 +12,7 @@ kind: ServiceAccount
 metadata:
   name: phlare-dev
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -358,7 +358,7 @@ kind: ConfigMap
 metadata:
   name: phlare-dev-overrides-config
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -374,7 +374,7 @@ kind: ConfigMap
 metadata:
   name: phlare-dev-config
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -406,10 +406,6 @@ data:
         regex: ""
         source_labels:
         - __meta_kubernetes_pod_annotation_profiles_grafana_com_memory_port_name
-      - action: keep
-        regex: (.*-(metrics|profiles)|http2)
-        source_labels:
-        - __meta_kubernetes_pod_container_port_name
       - action: replace
         regex: (https?)
         replacement: $1
@@ -527,6 +523,9 @@ data:
             enabled: false
           mutex:
             enabled: false
+          process_cpu:
+            delta: true
+            enabled: true
       relabel_configs:
       - action: keep
         regex: true
@@ -536,10 +535,6 @@ data:
         regex: ""
         source_labels:
         - __meta_kubernetes_pod_annotation_profiles_grafana_com_cpu_port_name
-      - action: keep
-        regex: (.*-(metrics|profiles)|http2)
-        source_labels:
-        - __meta_kubernetes_pod_container_port_name
       - action: replace
         regex: (https?)
         replacement: $1
@@ -591,6 +586,9 @@ data:
             enabled: false
           mutex:
             enabled: false
+          process_cpu:
+            delta: true
+            enabled: true
       relabel_configs:
       - action: keep
         regex: true
@@ -666,10 +664,6 @@ data:
         regex: ""
         source_labels:
         - __meta_kubernetes_pod_annotation_profiles_grafana_com_block_port_name
-      - action: keep
-        regex: (.*-(metrics|profiles)|http2)
-        source_labels:
-        - __meta_kubernetes_pod_container_port_name
       - action: replace
         regex: (https?)
         replacement: $1
@@ -798,10 +792,6 @@ data:
         regex: ""
         source_labels:
         - __meta_kubernetes_pod_annotation_profiles_grafana_com_mutex_port_name
-      - action: keep
-        regex: (.*-(metrics|profiles)|http2)
-        source_labels:
-        - __meta_kubernetes_pod_container_port_name
       - action: replace
         regex: (https?)
         replacement: $1
@@ -930,10 +920,6 @@ data:
         regex: ""
         source_labels:
         - __meta_kubernetes_pod_annotation_profiles_grafana_com_goroutine_port_name
-      - action: keep
-        regex: (.*-(metrics|profiles)|http2)
-        source_labels:
-        - __meta_kubernetes_pod_container_port_name
       - action: replace
         regex: (https?)
         replacement: $1
@@ -1053,7 +1039,7 @@ kind: ClusterRole
 metadata:
   name: default-phlare-dev
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1079,7 +1065,7 @@ kind: ClusterRoleBinding
 metadata:
   name: default-phlare-dev
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1167,7 +1153,7 @@ kind: Service
 metadata:
   name: phlare-dev-memberlist
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1193,7 +1179,7 @@ kind: Service
 metadata:
   name: phlare-dev-agent
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1217,7 +1203,7 @@ kind: Service
 metadata:
   name: phlare-dev-agent-headless
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1242,7 +1228,7 @@ kind: Service
 metadata:
   name: phlare-dev-distributor
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1266,7 +1252,7 @@ kind: Service
 metadata:
   name: phlare-dev-distributor-headless
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1291,7 +1277,7 @@ kind: Service
 metadata:
   name: phlare-dev-ingester
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1315,7 +1301,7 @@ kind: Service
 metadata:
   name: phlare-dev-ingester-headless
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1340,7 +1326,7 @@ kind: Service
 metadata:
   name: phlare-dev-querier
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1364,7 +1350,7 @@ kind: Service
 metadata:
   name: phlare-dev-querier-headless
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1389,7 +1375,7 @@ kind: Service
 metadata:
   name: phlare-dev-query-frontend
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1413,7 +1399,7 @@ kind: Service
 metadata:
   name: phlare-dev-query-frontend-headless
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1438,7 +1424,7 @@ kind: Service
 metadata:
   name: phlare-dev-query-scheduler
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1462,7 +1448,7 @@ kind: Service
 metadata:
   name: phlare-dev-query-scheduler-headless
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1487,7 +1473,7 @@ kind: Deployment
 metadata:
   name: phlare-dev-agent
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1503,9 +1489,12 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: 65a7e6c11941c8c31ed1f5d154a82ad492d607df2707cb13b1fd1cbea3b1c1f5
+        checksum/config: 1115b23a6b64ac92648f9e4bc43a571f388662fa077280488b506475ab51d69d
+        profiles.grafana.com/cpu.port_name: http2
         profiles.grafana.com/cpu.scrape: "true"
+        profiles.grafana.com/goroutine.port_name: http2
         profiles.grafana.com/goroutine.scrape: "true"
+        profiles.grafana.com/memory.port_name: http2
         profiles.grafana.com/memory.scrape: "true"
       labels:
         app.kubernetes.io/name: phlare
@@ -1573,7 +1562,7 @@ kind: Deployment
 metadata:
   name: phlare-dev-distributor
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1589,9 +1578,12 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: 65a7e6c11941c8c31ed1f5d154a82ad492d607df2707cb13b1fd1cbea3b1c1f5
+        checksum/config: 1115b23a6b64ac92648f9e4bc43a571f388662fa077280488b506475ab51d69d
+        profiles.grafana.com/cpu.port_name: http2
         profiles.grafana.com/cpu.scrape: "true"
+        profiles.grafana.com/goroutine.port_name: http2
         profiles.grafana.com/goroutine.scrape: "true"
+        profiles.grafana.com/memory.port_name: http2
         profiles.grafana.com/memory.scrape: "true"
       labels:
         app.kubernetes.io/name: phlare
@@ -1658,7 +1650,7 @@ kind: Deployment
 metadata:
   name: phlare-dev-querier
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1674,9 +1666,12 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: 65a7e6c11941c8c31ed1f5d154a82ad492d607df2707cb13b1fd1cbea3b1c1f5
+        checksum/config: 1115b23a6b64ac92648f9e4bc43a571f388662fa077280488b506475ab51d69d
+        profiles.grafana.com/cpu.port_name: http2
         profiles.grafana.com/cpu.scrape: "true"
+        profiles.grafana.com/goroutine.port_name: http2
         profiles.grafana.com/goroutine.scrape: "true"
+        profiles.grafana.com/memory.port_name: http2
         profiles.grafana.com/memory.scrape: "true"
       labels:
         app.kubernetes.io/name: phlare
@@ -1743,7 +1738,7 @@ kind: Deployment
 metadata:
   name: phlare-dev-query-frontend
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1759,9 +1754,12 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: 65a7e6c11941c8c31ed1f5d154a82ad492d607df2707cb13b1fd1cbea3b1c1f5
+        checksum/config: 1115b23a6b64ac92648f9e4bc43a571f388662fa077280488b506475ab51d69d
+        profiles.grafana.com/cpu.port_name: http2
         profiles.grafana.com/cpu.scrape: "true"
+        profiles.grafana.com/goroutine.port_name: http2
         profiles.grafana.com/goroutine.scrape: "true"
+        profiles.grafana.com/memory.port_name: http2
         profiles.grafana.com/memory.scrape: "true"
       labels:
         app.kubernetes.io/name: phlare
@@ -1828,7 +1826,7 @@ kind: Deployment
 metadata:
   name: phlare-dev-query-scheduler
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1844,9 +1842,12 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: 65a7e6c11941c8c31ed1f5d154a82ad492d607df2707cb13b1fd1cbea3b1c1f5
+        checksum/config: 1115b23a6b64ac92648f9e4bc43a571f388662fa077280488b506475ab51d69d
+        profiles.grafana.com/cpu.port_name: http2
         profiles.grafana.com/cpu.scrape: "true"
+        profiles.grafana.com/goroutine.port_name: http2
         profiles.grafana.com/goroutine.scrape: "true"
+        profiles.grafana.com/memory.port_name: http2
         profiles.grafana.com/memory.scrape: "true"
       labels:
         app.kubernetes.io/name: phlare
@@ -2008,7 +2009,7 @@ kind: StatefulSet
 metadata:
   name: phlare-dev-ingester
   labels:
-    helm.sh/chart: phlare-0.5.2
+    helm.sh/chart: phlare-0.5.3
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -2026,9 +2027,12 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: 65a7e6c11941c8c31ed1f5d154a82ad492d607df2707cb13b1fd1cbea3b1c1f5
+        checksum/config: 1115b23a6b64ac92648f9e4bc43a571f388662fa077280488b506475ab51d69d
+        profiles.grafana.com/cpu.port_name: http2
         profiles.grafana.com/cpu.scrape: "true"
+        profiles.grafana.com/goroutine.port_name: http2
         profiles.grafana.com/goroutine.scrape: "true"
+        profiles.grafana.com/memory.port_name: http2
         profiles.grafana.com/memory.scrape: "true"
       labels:
         app.kubernetes.io/name: phlare
