--- a/operations/phlare/helm/phlare/values.yaml
+++ b/operations/phlare/helm/phlare/values.yaml
@@ -40,8 +40,11 @@ phlare:
   podAnnotations:
     # Scrapes itself see https://grafana.com/docs/phlare/latest/operators-guide/deploy-kubernetes/#optional-scrape-your-own-workloads-profiles
     profiles.grafana.com/memory.scrape: "true"
+    profiles.grafana.com/memory.port_name: http2
     profiles.grafana.com/cpu.scrape: "true"
+    profiles.grafana.com/cpu.port_name: http2
     profiles.grafana.com/goroutine.scrape: "true"
+    profiles.grafana.com/goroutine.port_name: http2
     # profiles.grafana.com/block.scrape: "true"
     # profiles.grafana.com/mutex.scrape: "true"
 
@@ -186,9 +189,6 @@ phlare:
           - source_labels: [__meta_kubernetes_pod_annotation_profiles_grafana_com_memory_port_name]
             action: keep
             regex: ''
-          - source_labels: ['__meta_kubernetes_pod_container_port_name']
-            action: 'keep'
-            regex: '(.*-(metrics|profiles)|http2)'
           - source_labels: ['__meta_kubernetes_pod_annotation_profiles_grafana_com_memory_scheme']
             action: 'replace'
             target_label: '__scheme__'
@@ -287,6 +287,9 @@ phlare:
               enabled: false
             goroutine:
               enabled: false
+            process_cpu:
+              enabled: true
+              delta: true
         relabel_configs:
           - source_labels: [__meta_kubernetes_pod_annotation_profiles_grafana_com_cpu_scrape]
             action: keep
@@ -294,9 +297,6 @@ phlare:
           - source_labels: [__meta_kubernetes_pod_annotation_profiles_grafana_com_cpu_port_name]
             action: keep
             regex: ''
-          - source_labels: ['__meta_kubernetes_pod_container_port_name']
-            action: 'keep'
-            regex: '(.*-(metrics|profiles)|http2)'
           - source_labels: ['__meta_kubernetes_pod_annotation_profiles_grafana_com_cpu_scheme']
             action: 'replace'
             target_label: '__scheme__'
@@ -340,6 +340,9 @@ phlare:
               enabled: false
             goroutine:
               enabled: false
+            process_cpu:
+              enabled: true
+              delta: true
         relabel_configs:
           - source_labels: [__meta_kubernetes_pod_annotation_profiles_grafana_com_cpu_scrape]
             action: keep
@@ -402,9 +405,6 @@ phlare:
           - source_labels: [__meta_kubernetes_pod_annotation_profiles_grafana_com_block_port_name]
             action: keep
             regex: ''
-          - source_labels: ['__meta_kubernetes_pod_container_port_name']
-            action: 'keep'
-            regex: '(.*-(metrics|profiles)|http2)'
           - source_labels: ['__meta_kubernetes_pod_annotation_profiles_grafana_com_block_scheme']
             action: 'replace'
             target_label: '__scheme__'
@@ -512,9 +512,6 @@ phlare:
           - source_labels: [__meta_kubernetes_pod_annotation_profiles_grafana_com_mutex_port_name]
             action: keep
             regex: ''
-          - source_labels: ['__meta_kubernetes_pod_container_port_name']
-            action: 'keep'
-            regex: '(.*-(metrics|profiles)|http2)'
           - source_labels: ['__meta_kubernetes_pod_annotation_profiles_grafana_com_mutex_scheme']
             action: 'replace'
             target_label: '__scheme__'
@@ -622,9 +619,6 @@ phlare:
           - source_labels: [__meta_kubernetes_pod_annotation_profiles_grafana_com_goroutine_port_name]
             action: keep
             regex: ''
-          - source_labels: ['__meta_kubernetes_pod_container_port_name']
-            action: 'keep'
-            regex: '(.*-(metrics|profiles)|http2)'
           - source_labels: ['__meta_kubernetes_pod_annotation_profiles_grafana_com_goroutine_scheme']
             action: 'replace'
             target_label: '__scheme__'
