chore: update rbspy in ruby examples

--- a/examples/ruby/rideshare/Gemfile
+++ b/examples/ruby/rideshare/Gemfile
@@ -5,8 +5,7 @@ source "https://rubygems.org"
 git_source(:github) { |repo_name| "https://github.com/#{repo_name}" }
 
 # gem "rails"
-
-gem "pyroscope"
+gem 'pyroscope', '= 0.5.2'
 gem "sinatra", "~> 2.1"
 
 gem "thin", "~> 1.8"
