Serve a basic react app under /ui (#606)
* build a hello world React App using `yarn build`

this is an initial step for embedding the Pyroscope OSS ui in Pyroscope Phlare

* add a rudimentary 'dev' command for quick iterative dev

* embed assets if flag is on, so that the ui is available under the single binary

* embed assets (spa) when publishing binary/docker

* fix lint error

* fix node caching in ci

* remove 'hello world' message to make it mergeable

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,10 @@ jobs:
         with:
           go-version: ">=1.19.5"
           cache: true
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.15.0
+          cache: yarn
       # setup docker buildx
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -41,6 +45,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - run: make frontend/build
       - uses: goreleaser/goreleaser-action@v4
         with:
           # either 'goreleaser' (default) or 'goreleaser-pro':
