--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -117,6 +117,10 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.19.6
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.15.0
+          cache: yarn
       - name: Build image Phlare
         run: make docker-image/phlare/build "BUILDX_ARGS=--cache-from=type=gha --cache-to=type=gha"
 
@@ -135,6 +139,10 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.19.6
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.15.0
+          cache: yarn
       - name: Login to GCR
         uses: docker/login-action@v2
         with:
