--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "copy-webpack-plugin": "^11.0.0",
     "esbuild-loader": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.7.5",
+    "sass": "^1.60.0",
     "webpack": "^5.77.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.1",
@@ -21,8 +23,8 @@
   },
   "dependencies": {
     "jquery": "^3.6.4",
+    "pyroscope-oss": "git+https://github.com/pyroscope-io/pyroscope.git#5e544c2ef6cb88eedec84fae560e947ac0f183cb",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "pyroscope-oss": "git+https://github.com/pyroscope-io/pyroscope.git#5e544c2ef6cb88eedec84fae560e947ac0f183cb"
+    "react-dom": "^18.2.0"
   }
 }
