--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react-dom": "^18.0.11",
     "copy-webpack-plugin": "^11.0.0",
     "esbuild-loader": "^3.0.1",
+    "expose-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.5",
+    "react-svg-loader": "^3.0.3",
     "sass": "^1.60.0",
     "webpack": "^5.77.0",
     "webpack-cli": "^5.0.1",
@@ -25,6 +27,22 @@
     "jquery": "^3.6.4",
     "pyroscope-oss": "git+https://github.com/pyroscope-io/pyroscope.git#5e544c2ef6cb88eedec84fae560e947ac0f183cb",
     "react": "^18.2.0",
+    "react-redux": "^7.2.1",
+    "@szhsin/react-menu": "3.3.0",
+    "@react-hook/resize-observer": "^1.2.4",
+    "graphviz-react": "^1.2.5",
+    "react-outside-click-handler": "^1.3.0",
+    "react-notifications-component": "~3.1.0",
+    "@mui/base": "^5.0.0-alpha.98",
+    "@react-hook/window-size": "^3.0.7",
+    "react-debounce-input": "^3.2.5",
+    "@mui/material": "^5.10.11",
+    "react-helmet": "^6.1.0",
+    "react-flot": "^1.3.0",
+    "@reduxjs/toolkit": "^1.6.2",
+    "@fortawesome/react-fontawesome": "~0.1.11",
+    "react-datepicker": "^4.7.0",
+    "react-textarea-autosize": "8.3.0",
     "react-dom": "^18.2.0"
   }
 }
