--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
   "license": "AGPL-3.0-only",
   "private": true,
   "scripts": {
+    "type-check": "tsc -p tsconfig.json --noEmit",
     "build": "NODE_ENV=production webpack --progress --config scripts/webpack/webpack.prod.js",
     "dev": "NODE_ENV=development webpack serve --progress --color --config scripts/webpack/webpack.dev.js"
   },
   "devDependencies": {
+    "@types/history": "4.7.11",
+    "@types/jquery": "^3.5.13",
     "@types/react-dom": "^18.0.11",
+    "@types/react-outside-click-handler": "^1.3.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "copy-webpack-plugin": "^11.0.0",
     "esbuild-loader": "^3.0.1",
     "expose-loader": "^4.1.0",
