--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "@pyroscope/models/*": ["./node_modules/pyroscope-oss/packages/pyroscope-models/*"],
 
       "@webapp/components/ExportData": ["./public/app/overrides/components/ExportData"],
+      "@webapp/components/TimelineChart/TimelineChartWrapper": ["./public/app/overrides/components/TimelineChart/TimelineChartWrapper"],
       "@webapp/services/apps": ["./public/app/overrides/services/appNames"],
       "@webapp/services/render": ["./public/app/overrides/services/render"],
       "@webapp/services/tags": ["./public/app/overrides/services/tags"],
