--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "dev": "NODE_ENV=development webpack serve --progress --color --config scripts/webpack/webpack.dev.js"
   },
   "devDependencies": {
+    "@types/color": "^3.0.2",
+    "@types/d3-scale": "^4.0.2",
     "@types/history": "4.7.11",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/jquery": "^3.5.13",
+    "@types/prismjs": "^1.26.0",
+    "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^18.0.11",
+    "@types/react-helmet": "^6.1.5",
     "@types/react-outside-click-handler": "^1.3.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
