get latest fixed types from upstream

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/jquery": "^3.5.13",
     "@types/prismjs": "^1.26.0",
+    "@types/react": "^18.0.0",
     "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^18.0.11",
     "@types/react-helmet": "^6.1.5",
@@ -43,10 +44,10 @@
     "@react-hook/resize-observer": "^1.2.4",
     "@react-hook/window-size": "^3.0.7",
     "@reduxjs/toolkit": "^1.6.2",
-    "@szhsin/react-menu": "3.3.0",
+    "@szhsin/react-menu": "3.5.2",
     "graphviz-react": "^1.2.5",
     "jquery": "^3.6.4",
-    "pyroscope-oss": "git+https://github.com/pyroscope-io/pyroscope.git#5e544c2ef6cb88eedec84fae560e947ac0f183cb",
+    "pyroscope-oss": "git+https://github.com/pyroscope-io/pyroscope.git#e7cf318",
     "react": "^18.2.0",
     "react-datepicker": "^4.7.0",
     "react-debounce-input": "^3.2.5",
