--- a/package.json
+++ b/package.json
@@ -6,28 +6,31 @@
   "license": "AGPL-3.0-only",
   "private": true,
   "scripts": {
+    "test": "jest",
     "type-check": "tsc -p tsconfig.json --noEmit",
     "build": "NODE_ENV=production webpack --progress --config scripts/webpack/webpack.prod.js",
     "dev": "NODE_ENV=development webpack serve --progress --color --config scripts/webpack/webpack.dev.js"
   },
   "devDependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@types/color": "^3.0.2",
     "@types/d3-scale": "^4.0.2",
     "@types/history": "4.7.11",
-    "@types/lodash.debounce": "^4.0.6",
+    "@types/jest": "^29.5.0",
     "@types/jquery": "^3.5.13",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.0",
     "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^18.0.11",
     "@types/react-helmet": "^6.1.5",
     "@types/react-outside-click-handler": "^1.3.1",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
     "copy-webpack-plugin": "^11.0.0",
     "esbuild-loader": "^3.0.1",
     "expose-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.5",
     "react-svg-loader": "^3.0.3",
     "sass": "^1.60.0",
