--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -10,7 +10,7 @@ concurrency:
   # Cancel any running workflow for the same branch when new commits are pushed.
   # We group both by ref_name (available when CI is triggered by a push to a branch/tag)
   # and head_ref (available when CI is triggered by a PR).
-  group: "${{ github.ref_name }}-${{ github.head_ref }}"
+  group: "frontend-${{ github.ref_name }}-${{ github.head_ref }}"
   cancel-in-progress: true
 
 jobs:
