--- a/examples/dotnet/rideshare/example/Example.csproj
+++ b/examples/dotnet/rideshare/example/Example.csproj
@@ -1,14 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <AssemblyName>example</AssemblyName>
     <OutputType>Exe</OutputType>
     <PackageId>example</PackageId>
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Pyroscope">
-      <HintPath>..\..\..\..\..\pyroscope-dotnet\Pyroscope\Pyroscope\bin\Debug\net6.0\Pyroscope.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Pyroscope" Version="0.8.0" />
   </ItemGroup>
 </Project>
