feat: support multitenancy in the /ui (#676)

--- a/package.json
+++ b/package.json
@@ -50,8 +50,9 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "~0.1.11",
-    "@mui/base": "^5.0.0-alpha.98",
-    "@mui/material": "^5.10.11",
+    "@mui/base": "5.0.0-alpha.98",
+    "@mui/material": "5.10.11",
+    "@mui/types": "7.2.0",
     "@react-hook/resize-observer": "^1.2.4",
     "@react-hook/window-size": "^3.0.7",
     "@reduxjs/toolkit": "^1.6.2",
@@ -63,6 +64,7 @@
     "react-datepicker": "^4.7.0",
     "react-debounce-input": "^3.2.5",
     "react-dom": "^18.2.0",
+    "react-flatten-children": "^1.1.2",
     "react-flot": "^1.3.0",
     "react-helmet": "^6.1.0",
     "react-notifications-component": "~3.1.0",
