--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "plugins": [{ "name": "typescript-plugin-css-modules" }],
     // TODO: unify with webpack.common.js
     "paths": {
+      "@phlare/*": ["./public/app/*"],
+
       "@pyroscope/webapp/*": ["./node_modules/pyroscope-oss/webapp/*"],
       "@webapp/redux/*": ["./node_modules/pyroscope-oss/webapp/javascript/redux/*"],
       "@pyroscope/flamegraph/*": ["./node_modules/pyroscope-oss/packages/pyroscope-flamegraph/*"],
@@ -20,8 +22,11 @@
       "@webapp/services/apps": ["./public/app/overrides/services/appNames"],
       "@webapp/services/render": ["./public/app/overrides/services/render"],
       "@webapp/services/tags": ["./public/app/overrides/services/tags"],
+      "@webapp/services/base": ["./public/app/overrides/services/base"],
+      "@webapp/*": ["./node_modules/pyroscope-oss/webapp/javascript/*"],
 
-      "@webapp/*": ["./node_modules/pyroscope-oss/webapp/javascript/*"]
+      // Without this files under pyroscope-oss would resolve to ./node_modules/pyroscope-oss/@mui/base
+      "@mui/base/*": ["./node_modules/@mui/base/*"]
     },
     "target": "es5",
     "lib": [
