--- a/pkg/agent/ebpfspy/bpf/Makefile
+++ b/pkg/agent/ebpfspy/bpf/Makefile
@@ -1,14 +1,22 @@
-CLANG ?= clang
-
-CFLAGS := $(CFLAGS) -ggdb -gdwarf -O2 -Wall -fpie -Wno-unused-variable -Wno-unused-function
 
 
-profile.bpf.o: profile.bpf.c profile.bpf.h vmlinux.h
-	$(CLANG) $(CFLAGS) -target bpf -D__TARGET_ARCH_x86 -I. -c profile.bpf.c -o $@
 
-vmlinux.h:
-	wget https://raw.githubusercontent.com/iovisor/bcc/798a1056903b57687fd9d30a43c64c7a4402934c/libbpf-tools/x86/vmlinux_518.h -O $@
+LIBBPF_VERSION=0.6.1
+LIBBPF_PREFIX="https://raw.githubusercontent.com/libbpf/libbpf/v$(LIBBPF_VERSION)"
 
-.PHONY: clean
-clean:
-	rm -rf profile.bpf.o vmlinux.h
+.PHONY: get-libbpf-headers
+get-libbpf-headers:
+	cd libbpf && \
+		curl -O $(LIBBPF_PREFIX)/src/bpf_endian.h && \
+		curl -O $(LIBBPF_PREFIX)/src/bpf_helper_defs.h && \
+		curl -O $(LIBBPF_PREFIX)/src/bpf_helpers.h && \
+		curl -O $(LIBBPF_PREFIX)/src/bpf_tracing.h
+
+.PHONY: get-vmlinux-header
+get-vmlinux-header:
+	cd vmlinux && \
+		curl -O https://raw.githubusercontent.com/iovisor/bcc/v0.27.0/libbpf-tools/x86/vmlinux_518.h
+
+
+.PHONY: get-headers
+get-headers: get-libbpf-headers get-vmlinux-header
