--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "@types/lodash.groupby": "^4.6.7",
     "@types/lodash.map": "^4.6.13",
     "@types/prismjs": "^1.26.0",
+    "@types/react": "^18.0.0",
     "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^18.0.11",
     "@types/react-helmet": "^6.1.5",
     "@types/react-outside-click-handler": "^1.3.1",
     "@types/react-router-dom": "5.3.0",
-    "@types/react": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "copy-webpack-plugin": "^11.0.0",
@@ -59,6 +59,7 @@
     "prettier": "2.8.8",
     "react-svg-loader": "^3.0.3",
     "sass": "^1.60.0",
+    "ts-jest": "^29.1.0",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
     "webpack": "^5.77.0",
     "webpack-cli": "^5.0.1",
