--- a/examples/grafana-agent/pyroscope/config.yaml
+++ b/examples/grafana-agent/pyroscope/config.yaml
@@ -1,6 +1,6 @@
 ---
 scrape_configs:
-  - job_name: "phlare"
+  - job_name: "pyroscope"
     scrape_interval: "15s"
     static_configs:
       - targets: []
