fix: update and/or remove dependency lock files
- type checking issues

- format correction

- protobufjs, lerna dependencies, d3-color, etc.

--- a/.github/workflows/publish-lib-to-npm.yml
+++ b/.github/workflows/publish-lib-to-npm.yml
@@ -53,7 +53,7 @@ jobs:
       # Setup .npmrc file to publish to npm
       - uses: actions/setup-node@v2
         with:
-          node-version: '16.18'
+          node-version: 'lts/gallium'
           registry-url: 'https://registry.npmjs.org'
 
       - name: Get yarn cache directory path
