--- a/.github/workflows/size-limit.yml
+++ b/.github/workflows/size-limit.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '16.18'
+          node-version: 'lts/gallium'
       - name: Install Webapp dependencies
         run: yarn install --frozen-lockfile
       - uses: andresz1/size-limit-action@v1
