--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '16.18'
+          node-version: 'lts/gallium'
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.19.0'
@@ -68,7 +68,7 @@ jobs:
           go-version: '^1.19.0'
       - uses: actions/setup-node@v2
         with:
-          node-version: '16.18'
+          node-version: 'lts/gallium'
       - name: Cache go mod directories
         uses: actions/cache@v2
         with:
@@ -119,7 +119,7 @@ jobs:
           go-version: '^1.19.0'
       - uses: actions/setup-node@v2
         with:
-          node-version: '16.18'
+          node-version: 'lts/gallium'
       - name: Cache go mod directories
         uses: actions/cache@v2
         with:
@@ -173,7 +173,7 @@ jobs:
           go-version: '^1.19.0'
       - uses: actions/setup-node@v2
         with:
-          node-version: '16.18'
+          node-version: 'lts/gallium'
       - name: Cache go mod directories
         uses: actions/cache@v2
         with:
