--- a/.github/workflows/update-contributors.yml
+++ b/.github/workflows/update-contributors.yml
@@ -15,7 +15,7 @@ jobs:
           token: ${{ secrets.BOT_GITHUB_TOKEN }}
       - uses: actions/setup-node@v2
         with:
-          node-version: '16.18'
+          node-version: 'lts/gallium'
       - name: Install dependencies
         run: make install-web-dependencies
 
