--- a/examples/nodejs/express-pull/package.json
+++ b/examples/nodejs/express-pull/package.json
@@ -12,6 +12,7 @@
     "@pyroscope/nodejs": "^0.2.x",
     "express": "^4.17.3",
     "morgan": "^1.10.0",
-    "pprof": "^3.2.0"
+    "pprof": "^3.2.0",
+    "protobufjs": "^7.2.4"
   }
 }
