--- a/examples/nodejs/express-ts/package.json
+++ b/examples/nodejs/express-ts/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.3",
     "morgan": "^1.10.0",
     "pprof": "^3.2.0",
+    "protobufjs": "^7.2.4",
     "typescript": "^4.6.2"
   },
   "devDependencies": {
