--- a/package.json
+++ b/package.json
@@ -105,8 +105,8 @@
     "clean-webpack-plugin": "^3.0.0",
     "contributor-faces": "^1.1.0",
     "conventional-changelog-cli": "^2.1.1",
-    "cypress": "^8.6.0",
-    "cypress-image-snapshot": "^4.0.1",
+    "cypress": "^8.6",
+    "cypress-image-snapshot": "^4.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "7.2.0",
@@ -117,7 +117,7 @@
     "eslint-import-resolver-lerna": "^2.0.0",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-css-modules": "^2.11.0",
-    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-cypress": "^2.12",
     "eslint-plugin-import": "~2.26.0",
     "eslint-plugin-jest": "^25.3.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -185,7 +185,8 @@
     "copy-webpack-plugin": "^6.3.2",
     "css-loader": "^4.0.0",
     "d3": "^7.3.0",
-    "d3-array": "^3.1.1",
+    "d3-array": "^3.1",
+    "d3-color": "^3.1",
     "d3-scale": "^4.0.2",
     "d3-scale-chromatic": "^3.0.0",
     "d3-time": "^3.0.0",
@@ -202,7 +203,7 @@
     "jest-fetch-mock": "^3.0.3",
     "jquery": "3.6.0",
     "jquery.flot.tooltip": "^0.9.0",
-    "lerna": "^4.0.0",
+    "lerna": "^5",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lodash.defaults": "^4.2.0",
@@ -213,6 +214,7 @@
     "msw": "^0.36.3",
     "node-fetch": "^2.6.6",
     "normalize.css": "^8.0.1",
+    "parse-url": "^8.1.0",
     "postcss-browser-reporter": "^0.6.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^7.0.1",
@@ -266,8 +268,8 @@
     "*.{js,jsx,ts,tsx,json,yml,yaml,eslintrc,prettierrc,css,scss}": "prettier --write"
   },
   "resolutions": {
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
+    "react": "^16",
+    "react-dom": "^16",
     "jquery": "3.6.0",
     "d3-graphviz": "5.0.2",
     "d3-selection": "3.0.0"
