--- a/package.json
+++ b/package.json
@@ -164,7 +164,7 @@
     "@fortawesome/free-solid-svg-icons": "~5.14.0",
     "@fortawesome/react-fontawesome": "~0.1.11",
     "@hookform/resolvers": "^2.9.8",
-    "@mui/base": "^5.0.0-alpha.98",
+    "@mui/base": "^5.0.0-beta.7",
     "@mui/material": "^5.10.11",
     "@react-hook/resize-observer": "^1.2.4",
     "@react-hook/window-size": "^3.0.7",
