--- a/examples/nodejs/express/package.json
+++ b/examples/nodejs/express/package.json
@@ -13,5 +13,8 @@
     "express": "^4.17.3",
     "morgan": "^1.10.0",
     "pprof": "^3.2.0"
+  },
+  "resolutions": {
+    "protobufjs": "^7.2.4"
   }
 }
