--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - next
       - r[0-9]+ # Trigger builds after a push to weekly branches
   pull_request:
 
