--- a/og/package.json
+++ b/og/package.json
@@ -248,7 +248,7 @@
     "serialize-error": "^9.1.0",
     "style-loader": "^3.2.1",
     "svg-url-loader": "^7.1.1",
-    "sweetalert2": "^11.4.0",
+    "sweetalert2": "^11.4.0, <11.4.9",
     "sweetalert2-react-content": "^4.2.0",
     "timezone-mock": "^1.3.0",
     "true-myth": "~5.2.0",
