--- a/og/package.json
+++ b/og/package.json
@@ -269,9 +269,11 @@
     "@babel/core": "^7.22.9",
     "@babel/generator": "^7.22.9",
     "@babel/traverse": "^7.22.8",
+    "d3-color": "^3.1.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "jquery": "3.6.0",
+    "nth-check": "^2.0.1",
     "protobufjs": "^7.2.4",
     "tough-cookie": "^4.1.3",
     "optionator": "^0.9.3",
