Fix also image build push

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -87,7 +87,7 @@ jobs:
         run: make docker-image/phlare/build "BUILDX_ARGS=--cache-from=type=gha --cache-to=type=gha"
 
   build-push:
-    if: github.event_name == 'push' && github.repository == 'grafana/phlare'
+    if: github.event_name == 'push' && github.repository == 'grafana/pyroscope'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
