--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,17 +5,7 @@
     "paths": {
       "@phlare/*": ["./public/app/*"],
 
-      "@pyroscope/webapp/*": ["./node_modules/pyroscope-oss/webapp/*"],
-      "@webapp/redux/*": [
-        "./node_modules/pyroscope-oss/webapp/javascript/redux/*"
-      ],
-      "@pyroscope/flamegraph/*": [
-        "./node_modules/pyroscope-oss/packages/pyroscope-flamegraph/*"
-      ],
-      "@pyroscope/models/*": [
-        "./node_modules/pyroscope-oss/packages/pyroscope-models/*"
-      ],
-
+      "@pyroscope/webapp/*": ["./og/webapp/*"],
       "@webapp/components/ExportData": [
         "./public/app/overrides/components/ExportData"
       ],
@@ -43,7 +33,7 @@
       "@webapp/services/render": ["./public/app/overrides/services/render"],
       "@webapp/services/tags": ["./public/app/overrides/services/tags"],
       "@webapp/services/base": ["./public/app/overrides/services/base"],
-      "@webapp/*": ["./node_modules/pyroscope-oss/webapp/javascript/*"],
+      "@webapp/*": ["./og/webapp/javascript/*"],
       "@mui/base/*": ["./node_modules/@mui/base/*"],
       "zod": ["./node_modules/zod"]
     },
