--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,7 +81,7 @@ jobs:
           go-version: 1.19.10
       - uses: actions/setup-node@v3
         with:
-          node-version: 18.15.0
+          node-version: lts/hydrogen
           cache: yarn
       - name: Build image Phlare
         run: make docker-image/pyroscope/build "BUILDX_ARGS=--cache-from=type=gha --cache-to=type=gha"
@@ -103,7 +103,7 @@ jobs:
           go-version: 1.19.10
       - uses: actions/setup-node@v3
         with:
-          node-version: 18.15.0
+          node-version: lts/hydrogen
           cache: yarn
       - name: Login to GCR
         uses: docker/login-action@v2
