--- a/og/package.json
+++ b/og/package.json
@@ -5,10 +5,6 @@
   "version": "0.37.2",
   "license": "Apache-2.0",
   "main": "webapp/javascript/components/FlameGraph/FlameGraphComponent/index.jsx",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pyroscope-io/pyroscope.git"
-  },
   "scripts": {
     "start": "lerna-watch @pyroscope/webapp",
     "bootstrap": "lerna bootstrap && husky install",
@@ -277,7 +273,8 @@
     "d3-selection": "3.0.0",
     "semver": "^7.5.2"
   },
-  "optionalDependencies": {
-    "@pyroscope/nodejs": "^0.2.5"
-  }
+  "workspaces": [
+    "packages/*",
+    "webapp"
+  ]
 }
